# 2026_TIRT

./: .gitattributes  .gitignore  0721_net_issue_plan.md  CLAUDE.md  SLAM_learning_note.md  command_note.md  my_map.yaml  networkplan.md  run_robot.sh  run_rviz.sh  run_slam.sh  save_map.sh  urdf閱讀方法.md  urdf閱讀方法.txt  雙機RViz連線.md
CAD_files/3DP/: N20_Lego_bracket.STEP  N20_Lego_bracket_halfdown.STEP  N20_Lego_bracket_halfup.STEP  maccanum_connector.STEP  omnibot_mount_right.STEP  omnobot_mount.STEP  rpi_lidar_plate.STEP  test_foromnibot_mount.STEP
CAD_files/solidworks/: 1500mAh_Battery.SLDPRT  CAR_ASSEMBLY.SLDASM  Chasis_assemble_part.SLDPRT  Lego_Technic_15_Beams.SLDPRT  Lego_Technic_M_Beams.SLDPRT  N20_Lego_bracket.SLDPRT  N20_Lego_bracket_halfdown.SLDPRT  (+14 more)
CAR_ASSEMBLE_URDF/: CMakeLists.txt  package.xml
OminiBotHV-master/: README.md
car_assemble_description/: CMakeLists.txt  package.xml
car_assemble_description/config/: joint_names_CAR_ASSEMBLE_URDF.yaml  mapper_params_online_async.yaml
car_assemble_description/launch/: display.launch.py  gazebo.launch.py  robot_bringup.launch.py  slam_pc.launch.py
car_assemble_description/meshes/: base_link.STL  front_right_wheel_link.STL  lidar_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL
car_assemble_description/rviz/: view_robot.rviz
car_assemble_description/urdf/: CAR_ASSEMBLE_URDF.csv  CAR_ASSEMBLE_URDF.urdf
dds/: fastdds_lan.xml  run_discovery_server.sh  setup_dds.sh
maps/: clean_test.pgm  clean_test.yaml  drift_test.pgm  drift_test.yaml  gyro_test.pgm  gyro_test.yaml  scale_test.pgm  scale_test.yaml  slow_test.pgm  slow_test.yaml  test_map.pgm  test_map.yaml
ominibot_driver/: package.xml  setup.cfg  setup.py
ominibot_driver/launch/: ominibot_driver.launch.py
ominibot_driver/ominibot_driver/: driver_node.py  ominibot_hv.py  teleop_node.py
udev/: 99-ominibot.rules  99-rplidar.rules
(+50 files in other folders)
