<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ominibot_driver</name>
  <version>0.0.1</version>
  <description>
    ROS 2 driver node for the CircusPi OminiBotHV mecanum motor/IMU controller board.
    Subscribes /cmd_vel and drives the mecanum base; reads the board feedback frame and
    publishes /odom (+ odom-&gt;base_link TF) and /imu. Serial protocol per
    OminiBotHV-master/example/OminiBot_HV_Meca.py.
  </description>
  <maintainer email="lego@anvil.bot">Lego_rpi_4g</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
